welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:28: error: ')' expected but 'for' found.
	for(p<-1 to getWorldHeight()-1){
        ^